Fix spacing on showcase page and moved some repeated inline styles to the site stylesheet

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -16,3 +16,9 @@ $sticky-footer: true;
 
 @import 'patterns_grid';
 @include vfio-p-grid;
+
+// Local website styles
+.vfio-hero {
+  background-image: url('https://assets.ubuntu.com/v1/775cc62b-vanilla-grad-background.png');
+  background-position: 75% 50%;
+}
